refactor: allow overriding default target settings for external links
Additionally open 'Signup', 'Login' and 'Start Now' links in the same tab.

--- a/src/i18n/resources/en/translation.yml
+++ b/src/i18n/resources/en/translation.yml
@@ -57,6 +57,7 @@ layout:
       email: contact@hubrise.com
     copyright: Copyright © {{ year }} HubRise
   menu:
+    title: Menu
     links:
       - title: Home
         to: /
