--- a/src/i18n/resources/fr/translation.yml
+++ b/src/i18n/resources/fr/translation.yml
@@ -162,6 +162,7 @@ layout:
       email: contact@hubrise.com
     copyright: Copyright © {{ year }} HubRise
   menu:
+    title: Menu
     links:
       - title: Home
         to: /
