Added "Apps" to en menu

--- a/src/i18n/resources/en/translation.yml
+++ b/src/i18n/resources/en/translation.yml
@@ -13,8 +13,8 @@ layout:
     links:
       - title: Home
         to: /
-#      - title: Apps
-#        to: /apps
+      - title: Apps
+        to: /apps
       - title: Pricing
         to: /pricing
       - title: Developers
