--- a/src/i18n/resources/en/translation.yml
+++ b/src/i18n/resources/en/translation.yml
@@ -23,11 +23,12 @@ layout:
 misc:
   feedback:
     title: Feedback on this page
-    description: 'If you spot an error or need an improvement, you can:'
+    description: 'If you spotted an error or a need for improvement, you can:'
     options:
       - text: Send us an email
-      - text: Fix it yourself in a pull request
-        to: https://github.com/HubRise/website/pulls
+        to: 'mailto:support@hubrise.com'
+      - text: Or edit this page and submit a Pull Request
+        to: https://github.com/HubRise/website
 
 forms:
   validation:
