--- a/src/i18n/resources/en/translation.yml
+++ b/src/i18n/resources/en/translation.yml
@@ -29,7 +29,9 @@ misc:
       article: Feedback on this article
     description:
       default: 'If you spotted an error or a need for improvement, you can:'
-      article: Comments on this article are welcome. Don't hesitate to share your thoughts [by sending us a message]. We will reply to you.
+      article_part_1: Comments on this article are welcome. Don't hesitate to share your thoughts
+      article_part_2: by sending us a message
+      article_part_3: We will reply to you.
     options:
       send_email: Send us an email
       edit_page: Or edit this page and submit a Pull Request
