--- a/src/i18n/resources/fr/translation.yml
+++ b/src/i18n/resources/fr/translation.yml
@@ -31,7 +31,9 @@ misc:
       article: Commentaires sur cet article
     description:
       default: 'Si vous avez repéré une erreur ou souhaitez améliorer cette page, vous pouvez :'
-      article: Les commentaires sont les bienvenus. N'hésitez pas à nous faire part de vos remarques [en nous envoyant un message]. Nous vous répondrons.
+      article_part_1: Les commentaires sur cet article sont les bienvenus. N'hésitez pas à partager vos réflexions
+      article_part_2: en nous envoyant un message
+      article_part_3: Nous vous répondrons.
     options:
       send_email: Nous envoyer un email
       edit_page: Ou éditer cette page et nous soumettre un Pull Request
