--- a/src/i18n/resources/en/translation.yml
+++ b/src/i18n/resources/en/translation.yml
@@ -19,8 +19,8 @@ layout:
         to: /developers
       - title: Pricing
         to: /pricing
-      - title: Blog
-        to: /blog
+#      - title: Blog
+#        to: /blog
 
 misc:
   feedback:
