adding translations to search input

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,7 +1,8 @@
 {
   "apps": {
     "view_documentation": "View documentation",
-    "visit_website": "Open editor website"
+    "visit_website": "Open editor website",
+    "search_input_placeholder": "Search by app name"
   },
   "blog": {
     "hero": {
